# feframe

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  Shuttle.toml  build.rs  flake.nix  readme.md  shuttle_postbuild.sh
.github/workflows/: deploy.yml  rust.yml
backend/: Cargo.toml  build.rs
backend/src/: fetching.rs  main.rs
backend/src/fetching/: github.rs  goodreads.rs  lastfm.rs  letterboxd.rs
config/: Cargo.toml
config/src/: lib.rs
frontend/: Cargo.toml  index.html
frontend/src/: components.rs  main.rs
frontend/src/components/: github.rs  profile.rs
frontend/src/components/github/: button.rs  card.rs  row.rs  scroller.rs
frontend/src/components/goodreads/: button.rs  card.rs  scroller.rs
frontend/src/components/lastfm/: button.rs  card.rs  row.rs  scroller.rs
frontend/src/components/letterboxd/: button.rs  card.rs  row.rs  scroller.rs
frontend/src/components/profile/: card.rs  row.rs
src/: card_generators.rs  components.rs  dynamic_content.rs  env.rs  main.rs
src/card_generators/: commits.rs
src/components/: card.rs  content_rows.rs  main_card.rs  row_scroller.rs  social_button.rs
src/components/github/: button.rs  card.rs  row.rs  scroller.rs
src/components/lastfm/: button.rs  card.rs  row.rs  scroller.rs
src/dynamic_content/: cache.rs  github.rs  goodreads.rs  lastfm.rs  letterboxd.rs
tests/: env_tests.rs
types/: Cargo.toml
types/src/: lib.rs
