[package]
name = "pulse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
regex = "1.10.5"
reqwest = "0.12.4"
scraper = "0.19.0"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.1"
