[package]
name = "pulse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = {version = "0.51.4", features = ["async"]}
dotenv = "0.15.0"
regex = "1.10.5"
reqwest = "0.12.4"
scraper = "0.19.0"
serde_json = "1.0.117"
stylist = { version = "0.13.0", features = ["yew"] }
url = "2.5.1"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.69"
yew = { version = "0.21.0", features = ["csr"]}
