[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
local = []

[dependencies]
dotenv_codegen = "0.15.0"
types = { path = "../types" }
url = "2.5.2"

[build-dependencies]
url = "2.5.1"
dotenv_codegen = "0.15.0"
