[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
stylist = { version = "0.13.0", features = ["yew"] }
yew = { version = "0.21.0", features = ["csr"]}
wasm-bindgen-futures = "0.4.42"
url = "2.5.2"
