[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
config = { path = "../config" }
stylist = { version = "0.13.0", features = ["yew"] }
yew = { version = "0.21.0", features = ["csr"]}
wasm-bindgen-futures = "0.4.42"
url = "2.5.2"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde_json = "1.0.117"
tokio = "1.38.0"
chrono = "0.4.38"
chrono-tz = "0.9.0"
